@@ -15,115 +15,63 @@ package org.eclipse.esmf;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.io.BufferedInputStream;
-import java.io.BufferedWriter;
-import java.io.ByteArrayInputStream;
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.FileOutputStream;
-import java.io.FileWriter;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.LocalDate;
-import java.util.Comparator;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Stream;
+import java.util.regex.Pattern;
+
+import org.apache.commons.io.FileUtils;
+import org.apache.tika.mime.MediaType;
 
 import org.eclipse.esmf.aspectmodel.generator.jsonschema.AspectModelJsonSchemaGenerator;
-import org.eclipse.esmf.aspectmodel.resolver.process.ProcessLauncher;
-import org.eclipse.esmf.aspectmodel.resolver.process.ProcessLauncher.ExecutionResult;
 import org.eclipse.esmf.aspectmodel.urn.AspectModelUrn;
 import org.eclipse.esmf.aspectmodel.validation.InvalidSyntaxViolation;
+import org.eclipse.esmf.aspectmodel.validation.ProcessingViolation;
 import org.eclipse.esmf.metamodel.Aspect;
-import org.eclipse.esmf.samm.KnownVersion;
 import org.eclipse.esmf.test.InvalidTestAspect;
 import org.eclipse.esmf.test.OrderingTestAspect;
 import org.eclipse.esmf.test.TestAspect;
 import org.eclipse.esmf.test.TestModel;
 import org.eclipse.esmf.test.TestResources;
 import org.eclipse.esmf.test.TestSharedModel;
+import org.eclipse.esmf.util.process.ProcessLauncher;
+import org.eclipse.esmf.util.process.ProcessLauncher.ExecutionResult;
 
-import ch.qos.logback.classic.Level;
-import ch.qos.logback.classic.Logger;
-import ch.qos.logback.classic.LoggerContext;
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import org.apache.commons.io.FileUtils;
-import org.apache.jena.shared.LockMRSW;
-import org.apache.jena.sparql.core.mem.PMapQuadTable;
-import org.apache.tika.config.TikaConfig;
-import org.apache.tika.exception.TikaException;
-import org.apache.tika.metadata.Metadata;
-import org.apache.tika.mime.MediaType;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.RepeatedTest;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.condition.DisabledOnOs;
-import org.junit.jupiter.api.condition.EnabledIfSystemProperty;
 import org.junit.jupiter.api.condition.OS;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.api.io.TempDir;
 import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.EnumSource;
 import org.junit.jupiter.params.provider.ValueSource;
-import org.slf4j.LoggerFactory;
+
+import tools.jackson.databind.JsonNode;
+import tools.jackson.databind.ObjectMapper;
 
 /**
- * The tests for the CLI that are executed by Maven Surefire. They work using the {@link MainClassProcessLauncher}, i.e. directly call
- * the main function in {@link SammCli}.
+ * The tests for the CLI that are executed by Maven Surefire. They work using the
+ * {@link MainClassProcessLauncher}, i.e. directly call the main function in {@link SammCli}.
  */
 @ExtendWith( LogExtension.class )
 @TestInstance( TestInstance.Lifecycle.PER_CLASS )
-class SammCliTest {
-   protected ProcessLauncher<?> sammCli;
-   private final TestModel testModel = TestAspect.ASPECT_WITH_ENTITY;
-   private final String defaultInputFile = inputFile( testModel ).getAbsolutePath();
-   private final String defaultInputUrn = testModel.getUrn().toString();
-   private final String defaultModelsRoot = inputFile( testModel ).toPath().getParent().getParent().getParent().toFile().getAbsolutePath();
+class SammCliTest extends SammCliAbstractTest {
 
-   Path outputDirectory;
-
-   @BeforeEach
-   void beforeEach() throws IOException {
-      final List<String> additionalJvmArgs = Optional.ofNullable( System.getProperty( "nativeConfigPath" ) )
-            .map( path -> "-agentlib:native-image-agent=config-merge-dir=" + path )
-            .stream().toList();
-      sammCli = new MainClassProcessLauncher( SammCli.class, additionalJvmArgs,
-            argument -> !"-XX:ThreadPriorityPolicy=1".equals( argument ) && !argument.startsWith( "-agentlib:jdwp" )
+   @Override
+   protected ProcessLauncher<?> getCli() {
+      return new MainClassProcessLauncher( SammCli.class, List.of(),
+            argument -> !"-XX:ThreadPriorityPolicy=1".equals( argument ) && !argument.startsWith( "-agentlib:jdwp" ), true
       );
-      outputDirectory = Files.createTempDirectory( "junit" );
-
-      final LoggerContext loggerContext = (LoggerContext) LoggerFactory.getILoggerFactory();
-      Stream.of( LockMRSW.class, PMapQuadTable.class ).forEach( loggerClass -> {
-         final Logger logger = loggerContext.getLogger( loggerClass );
-         logger.setLevel( Level.OFF );
-      } );
-   }
-
-   @AfterEach
-   void afterEach() {
-      if ( null != outputDirectory ) {
-         final File outputDir = outputDirectory.toFile();
-         if ( outputDir.exists() && outputDir.isDirectory() ) {
-            // Recursively delete temporary directory
-            try ( final Stream<Path> paths = Files.walk( outputDirectory ) ) {
-               paths.sorted( Comparator.reverseOrder() )
-                     .map( Path::toFile )
-                     .forEach( file -> {
-                        if ( !file.delete() ) {
-                           System.err.println( "Could not delete file " + file );
-                        }
-                     } );
-            } catch ( final IOException exception ) {
-               throw new RuntimeException( exception );
-            }
-         }
-      }
    }
 
    @Test
@@ -203,17 +151,10 @@ class SammCliTest {
       assertThat( result.stderr() ).isEmpty();
    }
 
-   @Test
-   @EnabledIfSystemProperty( named = "packaging-type", matches = "native" )
-   void testVerboseOutput() {
-      final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "validate", "-vvv" );
-      assertThat( result.stdout() ).contains( "Input model is valid" );
-      assertThat( result.stderr() ).contains( "DEBUG" );
-   }
 
    @Test
-   void testAspectPrettyPrintToFile() {
-      final File targetFile = outputFile( "output.ttl" );
+   void testAspectPrettyPrintToFile( @TempDir final Path outputDirectory ) {
+      final File targetFile = outputFile( outputDirectory, "output.ttl" );
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "prettyprint", "-o",
             targetFile.getAbsolutePath() );
       assertThat( result.stdout() ).isEmpty();
@@ -251,8 +192,8 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectPrettyPrintOverwrite() throws IOException {
-      final File targetFile = outputFile( "output.ttl" );
+   void testAspectPrettyPrintOverwrite( @TempDir final Path outputDirectory ) throws IOException {
+      final File targetFile = outputFile( outputDirectory, "output.ttl" );
       FileUtils.copyFile( new File( defaultInputFile ), targetFile );
       assertThat( targetFile ).content().contains( "@prefix xsd:" );
 
@@ -289,15 +230,18 @@ class SammCliTest {
    }
 
    @Test
+   @Disabled( "Temporarily disabled due to an issue under investigation in CI" )
    void testAspectFromGitHubWithFullUrlValidateModel() {
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect",
             "https://github.com/eclipse-esmf/esmf-sdk/blob/main/core/esmf-test-aspect-models/src/main/resources/valid/org.eclipse.esmf"
-                  + ".test/1.0.0/AspectWithEntity.ttl", "validate" );
+                  + ".test/1.0.0/AspectWithEntity.ttl",
+            "validate" );
       assertThat( result.stdout() ).contains( "Input model is valid" );
       assertThat( result.stderr() ).isEmpty();
    }
 
    @Test
+   @Disabled( "Temporarily disabled due to an issue under investigation in CI" )
    void testAspectFromGitHubWithExplicitRepoValidateModel() {
       final String remoteModelsDirectory = "core/esmf-test-aspect-models/src/main/resources/valid";
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect",
@@ -307,6 +251,7 @@ class SammCliTest {
    }
 
    @Test
+   @Disabled( "Temporarily disabled due to an issue under investigation in CI" )
    void testAspectFromGitHubButRepoNotActuallyContainingFile() {
       final ExecutionResult result = sammCli.apply( "--disable-color", "aspect",
             defaultInputUrn, "validate", "--github", "eclipse-esmf/esmf-parent" );
@@ -314,15 +259,6 @@ class SammCliTest {
       assertThat( result.stderr() ).isEmpty();
    }
 
-   @ParameterizedTest
-   @EnumSource( TestAspect.class )
-   @EnabledIfSystemProperty( named = "packaging-type", matches = "native" )
-   void testAspectValidateValidModelAllTestFiles( final TestModel aspect ) {
-      final String input = inputFile( aspect ).getAbsolutePath();
-      final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", input, "validate" );
-      assertThat( result.stdout() ).contains( "Input model is valid" );
-      assertThat( result.stderr() ).isEmpty();
-   }
 
    @Test
    void testAspectValidateWithRelativePath() {
@@ -367,8 +303,8 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToAasXmlToFile() {
-      final File targetFile = outputFile( "output.xml" );
+   void testAspectToAasXmlToFile( @TempDir final Path outputDirectory ) {
+      final File targetFile = outputFile( outputDirectory, "output.xml" );
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "aas", "--format",
             "xml", "-o", targetFile.getAbsolutePath() );
       assertThat( result.stdout() ).isEmpty();
@@ -377,20 +313,6 @@ class SammCliTest {
       assertThat( targetFile ).content().startsWith( "<?xml" );
    }
 
-   @ParameterizedTest
-   @EnumSource( TestAspect.class )
-   @EnabledIfSystemProperty( named = "packaging-type", matches = "native" )
-   void testAspectToAasXmlToFileAllTestFiles( final TestModel aspect ) {
-      final String input = inputFile( aspect ).getAbsolutePath();
-      final File targetFile = outputFile( "output.xml" );
-      assertThat( targetFile ).doesNotExist();
-      final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", input, "to", "aas", "--format",
-            "xml", "-o", targetFile.getAbsolutePath() );
-      assertThat( result.stdout() ).isEmpty();
-      assertThat( result.stderr() ).isEmpty();
-      assertThat( targetFile ).exists();
-      assertThat( targetFile ).content().startsWith( "<?xml" );
-   }
 
    @Test
    void testAspectToAasXmlToStdout() {
@@ -400,20 +322,10 @@ class SammCliTest {
       assertThat( result.stderr() ).isEmpty();
    }
 
-   @ParameterizedTest
-   @EnumSource( TestAspect.class )
-   @EnabledIfSystemProperty( named = "packaging-type", matches = "native" )
-   void testAspectToAasXmlToStdoutAllTestFiles( final TestModel aspect ) {
-      final String input = inputFile( aspect ).getAbsolutePath();
-      final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", input, "to", "aas", "--format",
-            "xml" );
-      assertThat( result.stdout() ).startsWith( "<?xml" );
-      assertThat( result.stderr() ).isEmpty();
-   }
 
    @Test
-   void testAspectToAasAasxToFile() {
-      final File targetFile = outputFile( "output.aasx" );
+   void testAspectToAasAasxToFile( @TempDir final Path outputDirectory ) {
+      final File targetFile = outputFile( outputDirectory, "output.aasx" );
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "aas", "--format",
             "aasx", "-o", targetFile.getAbsolutePath() );
       assertThat( result.stdout() ).isEmpty();
@@ -422,20 +334,6 @@ class SammCliTest {
       assertThat( contentType( targetFile ) ).isEqualTo( MediaType.application( "x-tika-ooxml" ) );
    }
 
-   @ParameterizedTest
-   @EnumSource( TestAspect.class )
-   @EnabledIfSystemProperty( named = "packaging-type", matches = "native" )
-   void testAspectToAasAasxToFileAllTestFiles( final TestModel aspect ) {
-      final String input = inputFile( aspect ).getAbsolutePath();
-      final File targetFile = outputFile( "output.aasx" );
-      assertThat( targetFile ).doesNotExist();
-      final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", input, "to", "aas", "--format",
-            "aasx", "-o", targetFile.getAbsolutePath() );
-      assertThat( result.stdout() ).isEmpty();
-      assertThat( result.stderr() ).isEmpty();
-      assertThat( targetFile ).exists();
-      assertThat( contentType( targetFile ) ).isEqualTo( MediaType.application( "x-tika-ooxml" ) );
-   }
 
    @Test
    void testAspectToAasAasxToStdout() {
@@ -446,25 +344,9 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToAasJsonToFile() {
-      final File targetFile = outputFile( "output.json" );
+   void testAspectToAasJsonToFile( @TempDir final Path outputDirectory ) {
+      final File targetFile = outputFile( outputDirectory, "output.json" );
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "aas", "--format",
-            "json", "-o",
-            targetFile.getAbsolutePath() );
-      assertThat( result.stdout() ).isEmpty();
-      assertThat( result.stderr() ).isEmpty();
-      assertThat( targetFile ).exists();
-      assertThat( contentType( targetFile ) ).isEqualTo( MediaType.text( "plain" ) );
-   }
-
-   @ParameterizedTest
-   @EnumSource( TestAspect.class )
-   @EnabledIfSystemProperty( named = "packaging-type", matches = "native" )
-   void testAspectToAasJsonToFileAllTestFiles( final TestModel aspect ) {
-      final String input = inputFile( aspect ).getAbsolutePath();
-      final File targetFile = outputFile( "output.json" );
-      assertThat( targetFile ).doesNotExist();
-      final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", input, "to", "aas", "--format",
             "json", "-o",
             targetFile.getAbsolutePath() );
       assertThat( result.stdout() ).isEmpty();
@@ -481,16 +363,6 @@ class SammCliTest {
       assertThat( contentType( result.stdoutRaw() ) ).isEqualTo( MediaType.text( "plain" ) );
    }
 
-   @ParameterizedTest
-   @EnumSource( TestAspect.class )
-   @EnabledIfSystemProperty( named = "packaging-type", matches = "native" )
-   void testAspectToAasJsonToStdoutAllTestFiles( final TestModel aspect ) {
-      final String input = inputFile( aspect ).getAbsolutePath();
-      final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", input, "to", "aas", "--format",
-            "json" );
-      assertThat( result.stderr() ).isEmpty();
-      assertThat( contentType( result.stdoutRaw() ) ).isEqualTo( MediaType.text( "plain" ) );
-   }
 
    @RepeatedTest( 10 )
    void testAspectToAasJsonToStdoutContentAspectUploadOrdering() {
@@ -504,9 +376,9 @@ class SammCliTest {
    }
 
    @Test
-   void testAasToAspectModel() {
+   void testAasToAspectModel( @TempDir final Path outputDirectory ) {
       // First create the AAS XML file we want to read
-      final File aasXmlFile = outputFile( "output.xml" );
+      final File aasXmlFile = outputFile( outputDirectory, "output.xml" );
       final ExecutionResult generateAasXmlResult = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "aas",
             "--format", "xml", "-o", aasXmlFile.getAbsolutePath() );
       assertThat( generateAasXmlResult.stdout() ).isEmpty();
@@ -531,8 +403,8 @@ class SammCliTest {
    }
 
    @Test
-   void testAasListSubmodels() {
-      final File aasXmlFile = outputFile( "output.xml" );
+   void testAasListSubmodels( @TempDir final Path outputDirectory ) {
+      final File aasXmlFile = outputFile( outputDirectory, "output.xml" );
       final ExecutionResult generateAasXmlResult = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "aas",
             "--format", "xml", "-o", aasXmlFile.getAbsolutePath() );
       assertThat( generateAasXmlResult.stdout() ).isEmpty();
@@ -544,9 +416,9 @@ class SammCliTest {
    }
 
    @Test
-   void testAasToAspectModelWithSelectedSubmodels() {
+   void testAasToAspectModelWithSelectedSubmodels( @TempDir final Path outputDirectory ) {
       // First create the AAS XML file we want to read
-      final File aasXmlFile = outputFile( "output.xml" );
+      final File aasXmlFile = outputFile( outputDirectory, "output.xml" );
       final ExecutionResult generateAasXmlResult = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "aas",
             "--format", "xml", "-o", aasXmlFile.getAbsolutePath() );
       assertThat( generateAasXmlResult.stdout() ).isEmpty();
@@ -571,26 +443,24 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToHtmlWithDefaultLanguageToFile() {
-      final File targetFile = outputFile( "output.html" );
+   void testAspectToHtmlWithDefaultLanguageToFile( @TempDir final Path outputDirectory ) {
+      final File targetFile = outputFile( outputDirectory, "output.html" );
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "html", "-o",
             targetFile.getAbsolutePath() );
       assertThat( result.stdout() ).isEmpty();
       assertThat( result.stderr() ).isEmpty();
-      assertThat( targetFile ).exists();
-      assertThat( targetFile ).content().contains( "<html" );
+      assertThat( targetFile ).exists().content().contains( "<html" );
    }
 
    @Test
-   void testAspectToHtmlWithGivenLanguageToFile() {
-      final File targetFile = outputFile( "output.html" );
+   void testAspectToHtmlWithGivenLanguageToFile( @TempDir final Path outputDirectory ) {
+      final File targetFile = outputFile( outputDirectory, "output.html" );
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "html", "-o",
             targetFile.getAbsolutePath(), "--language",
             "en" );
       assertThat( result.stdout() ).isEmpty();
       assertThat( result.stderr() ).isEmpty();
-      assertThat( targetFile ).exists();
-      assertThat( targetFile ).content().contains( "<html" );
+      assertThat( targetFile ).exists().content().contains( "<html" );
    }
 
    @Test
@@ -602,9 +472,9 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToHtmlWithCustomCss() {
+   void testAspectToHtmlWithCustomCss( @TempDir final Path outputDirectory ) {
       final String customCss = "h1 { color: #123456; }";
-      final File customCssFile = outputFile( "custom.css" );
+      final File customCssFile = outputFile( outputDirectory, "custom.css" );
       writeToFile( customCssFile, customCss );
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "html", "--css",
             customCssFile.getAbsolutePath() );
@@ -620,12 +490,12 @@ class SammCliTest {
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", input, "to", "html" );
       assertThat( result.stderr() ).isEmpty();
       assertThat( result.stdout() )
-            .contains( "<div class='pb-4'>urn:samm:org.eclipse.esmf.test.ordering:1.0.0#Aspect</div>" )
-            .doesNotContain( "<div class='pb-4'>urn:samm:org.eclipse.esmf.test.ordering.dependency:1.0.0#Aspect</div>" );
+            .contains( "urn:samm:org.eclipse.esmf.test.ordering:1.0.0#Aspect" )
+            .doesNotContain( "urn:samm:org.eclipse.esmf.test.ordering.dependency:1.0.0#Aspect" );
    }
 
    @Test
-   void testAspectToJavaWithDefaultPackageName() {
+   void testAspectToJavaWithDefaultPackageName( @TempDir final Path outputDirectory ) {
       final File outputDir = outputDirectory.toFile();
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "java",
             "--output-directory",
@@ -644,7 +514,7 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToJavaWithCustomPackageName() {
+   void testAspectToJavaWithCustomPackageName( @TempDir final Path outputDirectory ) {
       final File outputDir = outputDirectory.toFile();
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "java",
             "--output-directory", outputDir.getAbsolutePath(), "--package-name", "com.example.foo" );
@@ -658,7 +528,7 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToJavaWithoutJacksonAnnotations() {
+   void testAspectToJavaWithoutJacksonAnnotations( @TempDir final Path outputDirectory ) {
       final File outputDir = outputDirectory.toFile();
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "java",
             "--output-directory", outputDir.getAbsolutePath(), "--no-jackson" );
@@ -676,7 +546,7 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToJavaWithDefaultPackageNameWithCustomResolver() {
+   void testAspectToJavaWithDefaultPackageNameWithCustomResolver( @TempDir final Path outputDirectory ) {
       final File outputDir = outputDirectory.toFile();
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "java",
             "--output-directory", outputDir.getAbsolutePath(), "--custom-resolver", resolverCommand() );
@@ -694,7 +564,7 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToJavaWithCustomFileHeader() {
+   void testAspectToJavaWithCustomFileHeader( @TempDir final Path outputDirectory ) {
       final File outputDir = outputDirectory.toFile();
       final File templateLibraryFile = new File(
             System.getProperty( "user.dir" ) + "/../../core/esmf-aspect-model-java-generator/templates/test-macro-lib.vm" );
@@ -716,7 +586,7 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToJavaCustomMacroLibraryValidation() {
+   void testAspectToJavaCustomMacroLibraryValidation( @TempDir final Path outputDirectory ) {
       final File outputDir = outputDirectory.toFile();
       final ExecutionResult result = sammCli.apply( "--disable-color", "aspect", defaultInputFile, "to", "java", "--output-directory",
             outputDir.getAbsolutePath(), "--execute-library-macros" );
@@ -726,7 +596,7 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToJavaWithSetters() {
+   void testAspectToJavaWithSetters( @TempDir final Path outputDirectory ) {
       final File outputDir = outputDirectory.toFile();
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "java",
             "--output-directory", outputDir.getAbsolutePath(), "--custom-resolver", resolverCommand(), "--enable-setters" );
@@ -743,7 +613,7 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToJavaWithFluentSetters() {
+   void testAspectToJavaWithFluentSetters( @TempDir final Path outputDirectory ) {
       final File outputDir = outputDirectory.toFile();
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "java",
             "--output-directory", outputDir.getAbsolutePath(), "--custom-resolver", resolverCommand(), "--enable-setters", "--setter-style",
@@ -761,7 +631,7 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToJavaWithFluentCompactSetters() {
+   void testAspectToJavaWithFluentCompactSetters( @TempDir final Path outputDirectory ) {
       final File outputDir = outputDirectory.toFile();
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "java",
             "--output-directory", outputDir.getAbsolutePath(), "--custom-resolver", resolverCommand(), "--enable-setters", "--setter-style",
@@ -779,7 +649,7 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToJavaStaticWithDefaultPackageName() {
+   void testAspectToJavaStaticWithDefaultPackageName( @TempDir final Path outputDirectory ) {
       final File outputDir = outputDirectory.toFile();
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "java",
             "--output-directory", outputDir.getAbsolutePath(), "--static" );
@@ -797,7 +667,7 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToJavaStaticWithCustomPackageName() {
+   void testAspectToJavaStaticWithCustomPackageName( @TempDir final Path outputDirectory ) {
       final File outputDir = outputDirectory.toFile();
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "java",
             "--output-directory", outputDir.getAbsolutePath(), "--static", "--package-name", "com.example.foo" );
@@ -815,7 +685,7 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToJavaStaticWithDefaultPackageNameWithCustomResolver() {
+   void testAspectToJavaStaticWithDefaultPackageNameWithCustomResolver( @TempDir final Path outputDirectory ) {
       final File outputDir = outputDirectory.toFile();
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "java",
             "--output-directory", outputDir.getAbsolutePath(), "--static", "--custom-resolver", resolverCommand() );
@@ -833,7 +703,7 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToJavaStaticWithCustomFileHeader() {
+   void testAspectToJavaStaticWithCustomFileHeader( @TempDir final Path outputDirectory ) {
       final File outputDir = outputDirectory.toFile();
       final File templateLibraryFile = new File(
             System.getProperty( "user.dir" ) + "/../../core/esmf-aspect-model-java-generator/templates/test-macro-lib.vm" );
@@ -854,8 +724,8 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToJsonToFile() {
-      final File targetFile = outputFile( "output.json" );
+   void testAspectToJsonToFile( @TempDir final Path outputDirectory ) {
+      final File targetFile = outputFile( outputDirectory, "output.json" );
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "json", "-o",
             targetFile.getAbsolutePath() );
       assertThat( result.stdout() ).isEmpty();
@@ -880,8 +750,8 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToJsonLdToFile() {
-      final File targetFile = outputFile( "output.json" );
+   void testAspectToJsonLdToFile( @TempDir final Path outputDirectory ) {
+      final File targetFile = outputFile( outputDirectory, "output.json" );
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "jsonld", "-o",
             targetFile.getAbsolutePath() );
       assertThat( result.stdout() ).isEmpty();
@@ -916,8 +786,8 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToJsonSchemaToFile() {
-      final File targetFile = outputFile( "output.schema.json" );
+   void testAspectToJsonSchemaToFile( @TempDir final Path outputDirectory ) {
+      final File targetFile = outputFile( outputDirectory, "output.schema.json" );
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "schema", "-o",
             targetFile.getAbsolutePath() );
       assertThat( result.stdout() ).isEmpty();
@@ -979,7 +849,7 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToOpenApiWithSeparateJsonFiles() {
+   void testAspectToOpenApiWithSeparateJsonFiles( @TempDir final Path outputDirectory ) {
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "openapi", "--json",
             "--api-base-url", "https://test.example.com", "--separate-files", "--output", outputDirectory.toString() );
 
@@ -991,7 +861,7 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToOpenApiWithSeparateYamlFiles() {
+   void testAspectToOpenApiWithSeparateYamlFiles( @TempDir final Path outputDirectory ) {
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "openapi",
             "--api-base-url", "https://test.example.com", "--separate-files", "--output", outputDirectory.toString() );
 
@@ -1010,27 +880,27 @@ class SammCliTest {
       assertThat( result.stdout() ).contains( "/{tenant-id}/aspect-with-entity:" );
       assertThat( result.stdout() ).contains(
             """
-                  post:
-                        tags:
-                        - AspectWithEntity
-                        operationId: postAspectWithEntity
-                  """
+               post:
+                     tags:
+                     - AspectWithEntity
+                     operationId: postAspectWithEntity
+               """
       );
       assertThat( result.stdout() ).contains(
             """
-                  put:
-                        tags:
-                        - AspectWithEntity
-                        operationId: putAspectWithEntity
-                  """
+               put:
+                     tags:
+                     - AspectWithEntity
+                     operationId: putAspectWithEntity
+               """
       );
       assertThat( result.stdout() ).contains(
             """
-                  patch:
-                        tags:
-                        - AspectWithEntity
-                        operationId: patchAspectWithEntity
-                  """
+               patch:
+                     tags:
+                     - AspectWithEntity
+                     operationId: patchAspectWithEntity
+               """
       );
       assertThat( result.stderr() ).isEmpty();
    }
@@ -1043,11 +913,11 @@ class SammCliTest {
       assertThat( result.stdout() ).contains( "/{tenant-id}/aspect-with-entity:" );
       assertThat( result.stdout() ).contains(
             """
-                  post:
-                        tags:
-                        - AspectWithEntity
-                        operationId: postAspectWithEntity
-                  """
+               post:
+                     tags:
+                     - AspectWithEntity
+                     operationId: postAspectWithEntity
+               """
       );
       assertThat( result.stderr() ).isEmpty();
    }
@@ -1060,11 +930,11 @@ class SammCliTest {
       assertThat( result.stdout() ).contains( "/{tenant-id}/aspect-with-entity:" );
       assertThat( result.stdout() ).contains(
             """
-                  put:
-                        tags:
-                        - AspectWithEntity
-                        operationId: putAspectWithEntity
-                  """
+               put:
+                     tags:
+                     - AspectWithEntity
+                     operationId: putAspectWithEntity
+               """
       );
       assertThat( result.stderr() ).isEmpty();
    }
@@ -1077,11 +947,11 @@ class SammCliTest {
       assertThat( result.stdout() ).contains( "/{tenant-id}/aspect-with-entity:" );
       assertThat( result.stdout() ).contains(
             """
-                  patch:
-                        tags:
-                        - AspectWithEntity
-                        operationId: patchAspectWithEntity
-                  """
+               patch:
+                     tags:
+                     - AspectWithEntity
+                     operationId: patchAspectWithEntity
+               """
       );
       assertThat( result.stderr() ).isEmpty();
    }
@@ -1094,19 +964,19 @@ class SammCliTest {
       assertThat( result.stdout() ).contains( "/{tenant-id}/aspect-with-entity:" );
       assertThat( result.stdout() ).contains(
             """
-                  patch:
-                        tags:
-                        - AspectWithEntity
-                        operationId: patchAspectWithEntity
-                  """
+               patch:
+                     tags:
+                     - AspectWithEntity
+                     operationId: patchAspectWithEntity
+               """
       );
       assertThat( result.stdout() ).contains(
             """
-                  put:
-                        tags:
-                        - AspectWithEntity
-                        operationId: putAspectWithEntity
-                  """
+               put:
+                     tags:
+                     - AspectWithEntity
+                     operationId: putAspectWithEntity
+               """
       );
       assertThat( result.stderr() ).isEmpty();
    }
@@ -1119,20 +989,51 @@ class SammCliTest {
       assertThat( result.stdout() ).contains( "/{tenant-id}/aspect-with-entity:" );
       assertThat( result.stdout() ).contains(
             """
-                  post:
-                        tags:
-                        - AspectWithEntity
-                        operationId: postAspectWithEntity
-                  """
+               post:
+                     tags:
+                     - AspectWithEntity
+                     operationId: postAspectWithEntity
+               """
       );
       assertThat( result.stdout() ).contains(
             """
-                  put:
-                        tags:
-                        - AspectWithEntity
-                        operationId: putAspectWithEntity
-                  """
+               put:
+                     tags:
+                     - AspectWithEntity
+                     operationId: putAspectWithEntity
+               """
       );
+      assertThat( result.stderr() ).isEmpty();
+   }
+
+   @Test
+   void testAspectToOpenApiWithQueryApi() {
+      final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "openapi", "--json",
+            "--api-base-url", "https://test.example.com", "--include-query-api" );
+      assertThat( result.stdout() ).contains( "\"openapi\" : \"3.0.3\"" );
+      assertThat( result.stdout() ).contains( "\"url\" : \"https://test.example.com/api/v1\"" );
+      assertThat( result.stdout() ).contains( "\"url\" : \"https://test.example.com/query-api/v1\"" );
+      assertThat( result.stderr() ).isEmpty();
+   }
+
+   @Test
+   void testAspectToOpenApiWithQueryApiPath() {
+      final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "openapi", "--json",
+            "--api-base-url", "https://test.example.com", "--include-query-api", "--query-api-path", "/query-api/v2" );
+      assertThat( result.stdout() ).contains( "\"openapi\" : \"3.0.3\"" );
+      assertThat( result.stdout() ).contains( "\"url\" : \"https://test.example.com/api/v1\"" );
+      assertThat( result.stdout() ).contains( "\"url\" : \"https://test.example.com/query-api/v2\"" );
+      assertThat( result.stderr() ).isEmpty();
+   }
+
+   @Test
+   void testAspectToOpenApiWithOperationsApiPath() {
+      final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect",
+            inputFile( TestAspect.ASPECT_WITH_OPERATION ).getAbsolutePath(), "to", "openapi", "--json",
+            "--api-base-url", "https://test.example.com", "--operations-api-path", "/rpc-api/v2" );
+      assertThat( result.stdout() ).contains( "\"openapi\" : \"3.0.3\"" );
+      assertThat( result.stdout() ).contains( "\"url\" : \"https://test.example.com/api/v1\"" );
+      assertThat( result.stdout() ).contains( "\"url\" : \"https://test.example.com/rpc-api/v2\"" );
       assertThat( result.stderr() ).isEmpty();
    }
 
@@ -1141,7 +1042,7 @@ class SammCliTest {
       final ExecutionResult result = sammCli.apply( "--disable-color", "aspect", defaultInputFile, "to", "asyncapi" );
       assertThat( result.exitStatus() ).isZero();
       assertThat( result.stdout() ).isNotEmpty();
-      assertThat( result.stdout() ).contains( "asyncapi: 3.0.0" );
+      assertThat( result.stdout() ).contains( "asyncapi: 3.1.0" );
       assertThat( result.stderr() ).isEmpty();
    }
 
@@ -1150,9 +1051,17 @@ class SammCliTest {
       final ExecutionResult result = sammCli.apply( "--disable-color", "aspect", defaultInputFile, "to", "asyncapi", "-ai", "test:serve" );
       assertThat( result.exitStatus() ).isZero();
       assertThat( result.stdout() ).isNotEmpty();
-      assertThat( result.stdout() ).contains( "asyncapi: 3.0.0" );
+      assertThat( result.stdout() ).contains( "asyncapi: 3.1.0" );
       assertThat( result.stdout() ).contains( "id: test:serve" );
       assertThat( result.stderr() ).isEmpty();
+   }
+
+   @Test
+   void testAspectToAsyncapiWithInvalidApplicationId() {
+      final ExecutionResult result = sammCli.apply( "--disable-color", "aspect", defaultInputFile, "to", "asyncapi", "-ai", "test" );
+      assertThat( result.exitStatus() ).isOne();
+      assertThat( result.stdout() ).isEmpty();
+      assertThat( result.stderr() ).contains( "Application id must be an absolute URI." );
    }
 
    @Test
@@ -1160,7 +1069,7 @@ class SammCliTest {
       final ExecutionResult result = sammCli.apply( "--disable-color", "aspect", defaultInputFile, "to", "asyncapi" );
       assertThat( result.exitStatus() ).isZero();
       assertThat( result.stdout() ).isNotEmpty();
-      assertThat( result.stdout() ).contains( "asyncapi: 3.0.0" );
+      assertThat( result.stdout() ).contains( "asyncapi: 3.1.0" );
       assertThat( result.stdout() ).contains( "address: /org.eclipse.esmf.test/1.0.0/AspectWithEntity" );
       assertThat( result.stderr() ).isEmpty();
    }
@@ -1171,14 +1080,14 @@ class SammCliTest {
             "-ca", "test/address/aspect/1.0.0/TestAspect" );
       assertThat( result.exitStatus() ).isZero();
       assertThat( result.stdout() ).isNotEmpty();
-      assertThat( result.stdout() ).contains( "asyncapi: 3.0.0" );
+      assertThat( result.stdout() ).contains( "asyncapi: 3.1.0" );
       assertThat( result.stdout() ).contains( "address: test/address/aspect/1.0.0/TestAspect" );
       assertThat( result.stderr() ).isEmpty();
    }
 
    @Test
-   void testAspectToAsyncapiWithOutputParam() {
-      final File outputAsyncApiSpecFile = outputFile( testModel.getName() + ".json" );
+   void testAspectToAsyncapiWithOutputParam( @TempDir final Path outputDirectory ) {
+      final File outputAsyncApiSpecFile = outputFile( outputDirectory, testModel.getName() + ".json" );
       final ExecutionResult result = sammCli.apply( "--disable-color", "aspect", defaultInputFile, "to", "asyncapi", "--json", "-ai",
             "test:serve", "-ca", "test/address/aspect/1.0.0/TestAspect", "-o", outputAsyncApiSpecFile.getAbsolutePath() );
       assertThat( result.exitStatus() ).isZero();
@@ -1188,7 +1097,7 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToAsyncApiWithSeparateJsonFiles() {
+   void testAspectToAsyncApiWithSeparateJsonFiles( @TempDir final Path outputDirectory ) {
       final TestAspect testAspect = TestAspect.ASPECT_WITH_EVENT;
       final String inputFile = inputFile( testAspect ).getAbsolutePath();
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", inputFile, "to", "asyncapi", "--json", "-ai",
@@ -1202,8 +1111,8 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToPngWithDefaultLanguage() {
-      final File targetFile = outputFile( "output.png" );
+   void testAspectToPngWithDefaultLanguage( @TempDir final Path outputDirectory ) {
+      final File targetFile = outputFile( outputDirectory, "output.png" );
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "png", "-o",
             targetFile.getAbsolutePath() );
       assertThat( result.stdout() ).isEmpty();
@@ -1213,8 +1122,8 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToPngWithGivenLanguage() {
-      final File targetFile = outputFile( "output.png" );
+   void testAspectToPngWithGivenLanguage( @TempDir final Path outputDirectory ) {
+      final File targetFile = outputFile( outputDirectory, "output.png" );
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "png", "-o",
             targetFile.getAbsolutePath(), "--language", "en" );
       assertThat( result.stdout() ).isEmpty();
@@ -1224,8 +1133,8 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToPngWithNonExistentLanguage() {
-      final File targetFile = outputFile( "output.png" );
+   void testAspectToPngWithNonExistentLanguage( @TempDir final Path outputDirectory ) {
+      final File targetFile = outputFile( outputDirectory, "output.png" );
       final ExecutionResult result = sammCli.apply( "--disable-color", "aspect", defaultInputFile, "to", "png", "-o",
             targetFile.getAbsolutePath(), "--language", "de" );
       assertThat( result.exitStatus() ).isEqualTo( 1 );
@@ -1250,8 +1159,8 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToSvgWithDefaultLanguage() {
-      final File targetFile = outputFile( "output.svg" );
+   void testAspectToSvgWithDefaultLanguage( @TempDir final Path outputDirectory ) {
+      final File targetFile = outputFile( outputDirectory, "output.svg" );
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "svg", "-o",
             targetFile.getAbsolutePath() );
       assertThat( result.stdout() ).isEmpty();
@@ -1261,8 +1170,8 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToSvgWithGivenLanguage() {
-      final File targetFile = outputFile( "output.svg" );
+   void testAspectToSvgWithGivenLanguage( @TempDir final Path outputDirectory ) {
+      final File targetFile = outputFile( outputDirectory, "output.svg" );
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "svg", "-o",
             targetFile.getAbsolutePath(), "--language", "en" );
       assertThat( result.stdout() ).isEmpty();
@@ -1272,8 +1181,8 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectToSvgWithNonExistentLanguage() {
-      final File targetFile = outputFile( "output.svg" );
+   void testAspectToSvgWithNonExistentLanguage( @TempDir final Path outputDirectory ) {
+      final File targetFile = outputFile( outputDirectory, "output.svg" );
       final ExecutionResult result = sammCli.apply( "--disable-color", "aspect", defaultInputFile, "to", "svg", "-o",
             targetFile.getAbsolutePath(), "--language", "de" );
       assertThat( result.exitStatus() ).isEqualTo( 1 );
@@ -1298,6 +1207,15 @@ class SammCliTest {
    }
 
    @Test
+   void testAspectToSvgWithDetails() {
+      final File invalidModel = inputFile( InvalidTestAspect.INVALID_ENCODING );
+      final ExecutionResult result = sammCli.apply( "--disable-color", "aspect", invalidModel.getAbsolutePath(), "to", "svg", "--details" );
+      assertThat( result.exitStatus() ).isEqualTo( 1 );
+      assertThat( result.stdout() ).contains( ProcessingViolation.ERROR_CODE );
+      assertThat( result.stderr() ).isEmpty();
+   }
+
+   @Test
    void testAspectToSqlToStdout() {
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "to", "sql" );
       assertThat( result.stdout() ).contains( "CREATE TABLE" );
@@ -1314,11 +1232,11 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectEditMoveExistingFile() throws IOException {
+   void testAspectEditMoveExistingFile( @TempDir final Path outputDirectory ) throws IOException {
       // Set up file system structure of writable files
       final Path modelLocation = outputDirectory.resolve( testModel.getUrn().getNamespaceMainPart() )
             .resolve( testModel.getUrn().getVersion() );
-      modelLocation.toFile().mkdirs();
+      Files.createDirectories( modelLocation );
       final File inputFile = modelLocation.resolve( "AspectWithEntity.ttl" ).toFile();
       FileUtils.copyFile( inputFile( testModel ).getAbsoluteFile(), inputFile );
       final File targetFile = modelLocation.resolve( "target.ttl" ).toFile();
@@ -1339,11 +1257,11 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectEditMoveExistingFileDryRun() throws IOException {
+   void testAspectEditMoveExistingFileDryRun( @TempDir final Path outputDirectory ) throws IOException {
       // Set up file system structure of writable files
       final Path modelLocation = outputDirectory.resolve( testModel.getUrn().getNamespaceMainPart() )
             .resolve( testModel.getUrn().getVersion() );
-      modelLocation.toFile().mkdirs();
+      Files.createDirectories( modelLocation );
       final File inputFile = modelLocation.resolve( "AspectWithEntity.ttl" ).toFile();
       FileUtils.copyFile( inputFile( testModel ).getAbsoluteFile(), inputFile );
       final File targetFile = modelLocation.resolve( "target.ttl" ).toFile();
@@ -1364,11 +1282,11 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectEditMoveNewFile() throws IOException {
+   void testAspectEditMoveNewFile( @TempDir final Path outputDirectory ) throws IOException {
       // Set up file system structure of writable files
       final Path modelLocation = outputDirectory.resolve( testModel.getUrn().getNamespaceMainPart() )
             .resolve( testModel.getUrn().getVersion() );
-      modelLocation.toFile().mkdirs();
+      Files.createDirectories( modelLocation );
       final File inputFile = modelLocation.resolve( "AspectWithEntity.ttl" ).toFile();
       FileUtils.copyFile( inputFile( testModel ).getAbsoluteFile(), inputFile );
       final File targetFile = modelLocation.resolve( "target.ttl" ).toFile();
@@ -1387,11 +1305,11 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectEditMoveNewFileDryRun() throws IOException {
+   void testAspectEditMoveNewFileDryRun( @TempDir final Path outputDirectory ) throws IOException {
       // Set up file system structure of writable files
       final Path modelLocation = outputDirectory.resolve( testModel.getUrn().getNamespaceMainPart() )
             .resolve( testModel.getUrn().getVersion() );
-      modelLocation.toFile().mkdirs();
+      Files.createDirectories( modelLocation );
       final File inputFile = modelLocation.resolve( "AspectWithEntity.ttl" ).toFile();
       FileUtils.copyFile( inputFile( testModel ).getAbsoluteFile(), inputFile );
       final File targetFile = modelLocation.resolve( "target.ttl" ).toFile();
@@ -1410,18 +1328,18 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectEditMoveOtherNamespaceExistingFile() throws IOException {
+   void testAspectEditMoveOtherNamespaceExistingFile( @TempDir final Path outputDirectory ) throws IOException {
       // Set up file system structure of writable files
       final Path modelLocationNs1 = outputDirectory.resolve( testModel.getUrn().getNamespaceMainPart() )
             .resolve( testModel.getUrn().getVersion() );
-      modelLocationNs1.toFile().mkdirs();
+      Files.createDirectories( modelLocationNs1 );
       final File inputFile = modelLocationNs1.resolve( "AspectWithEntity.ttl" ).toFile();
       FileUtils.copyFile( inputFile( testModel ).getAbsoluteFile(), inputFile );
       final String targetNamespace = "urn:samm:org.eclipse.example.newnamespace:1.0.0";
       final AspectModelUrn newNamespace = AspectModelUrn.fromUrn( targetNamespace );
       final Path modelLocationNs2 = outputDirectory.resolve( newNamespace.getNamespaceMainPart() )
             .resolve( newNamespace.getVersion() );
-      modelLocationNs2.toFile().mkdirs();
+      Files.createDirectories( modelLocationNs2 );
       final File targetFile = modelLocationNs2.resolve( "target.ttl" ).toFile();
       Files.createFile( targetFile.toPath() );
       try ( final PrintWriter out = new PrintWriter( targetFile ) ) {
@@ -1440,18 +1358,18 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectEditMoveOtherNamespaceExistingFileDryRun() throws IOException {
+   void testAspectEditMoveOtherNamespaceExistingFileDryRun( @TempDir final Path outputDirectory ) throws IOException {
       // Set up file system structure of writable files
       final Path modelLocationNs1 = outputDirectory.resolve( testModel.getUrn().getNamespaceMainPart() )
             .resolve( testModel.getUrn().getVersion() );
-      modelLocationNs1.toFile().mkdirs();
+      Files.createDirectories( modelLocationNs1 );
       final File inputFile = modelLocationNs1.resolve( "AspectWithEntity.ttl" ).toFile();
       FileUtils.copyFile( inputFile( testModel ).getAbsoluteFile(), inputFile );
       final String targetNamespace = "urn:samm:org.eclipse.example.newnamespace:1.0.0";
       final AspectModelUrn newNamespace = AspectModelUrn.fromUrn( targetNamespace );
       final Path modelLocationNs2 = outputDirectory.resolve( newNamespace.getNamespaceMainPart() )
             .resolve( newNamespace.getVersion() );
-      modelLocationNs2.toFile().mkdirs();
+      Files.createDirectories( modelLocationNs2 );
       final File targetFile = modelLocationNs2.resolve( "target.ttl" ).toFile();
       Files.createFile( targetFile.toPath() );
       try ( final PrintWriter out = new PrintWriter( targetFile ) ) {
@@ -1472,11 +1390,11 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectEditMoveOtherNamespaceNewFile() throws IOException {
+   void testAspectEditMoveOtherNamespaceNewFile( @TempDir final Path outputDirectory ) throws IOException {
       // Set up file system structure of writable files
       final Path modelLocationNs1 = outputDirectory.resolve( testModel.getUrn().getNamespaceMainPart() )
             .resolve( testModel.getUrn().getVersion() );
-      modelLocationNs1.toFile().mkdirs();
+      Files.createDirectories( modelLocationNs1 );
       final File inputFile = modelLocationNs1.resolve( "AspectWithEntity.ttl" ).toFile();
       FileUtils.copyFile( inputFile( testModel ).getAbsoluteFile(), inputFile );
       final String targetNamespace = "urn:samm:org.eclipse.example.newnamespace:1.0.0";
@@ -1499,11 +1417,11 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectEditMoveOtherNamespaceNewFileDryRun() throws IOException {
+   void testAspectEditMoveOtherNamespaceNewFileDryRun( @TempDir final Path outputDirectory ) throws IOException {
       // Set up file system structure of writable files
       final Path modelLocationNs1 = outputDirectory.resolve( testModel.getUrn().getNamespaceMainPart() )
             .resolve( testModel.getUrn().getVersion() );
-      modelLocationNs1.toFile().mkdirs();
+      Files.createDirectories( modelLocationNs1 );
       final File inputFile = modelLocationNs1.resolve( "AspectWithEntity.ttl" ).toFile();
       FileUtils.copyFile( inputFile( testModel ).getAbsoluteFile(), inputFile );
       final String targetNamespace = "urn:samm:org.eclipse.example.newnamespace:1.0.0";
@@ -1526,11 +1444,11 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectEditNewVersionForFile() throws IOException {
+   void testAspectEditNewVersionForFile( @TempDir final Path outputDirectory ) throws IOException {
       // Set up file system structure of writable files
       final Path modelLocation = outputDirectory.resolve( testModel.getUrn().getNamespaceMainPart() )
             .resolve( testModel.getUrn().getVersion() );
-      modelLocation.toFile().mkdirs();
+      Files.createDirectories( modelLocation );
       final File inputFile = modelLocation.resolve( "AspectWithEntity.ttl" ).toFile();
       FileUtils.copyFile( inputFile( testModel ).getAbsoluteFile(), inputFile );
 
@@ -1546,11 +1464,11 @@ class SammCliTest {
    }
 
    @Test
-   void testAspectEditNewVersionForNamespace() throws IOException {
+   void testAspectEditNewVersionForNamespace( @TempDir final Path outputDirectory ) throws IOException {
       // Set up file system structure of writable files
       final Path modelLocation = outputDirectory.resolve( testModel.getUrn().getNamespaceMainPart() )
             .resolve( testModel.getUrn().getVersion() );
-      modelLocation.toFile().mkdirs();
+      Files.createDirectories( modelLocation );
       final File inputFile = modelLocation.resolve( "AspectWithEntity.ttl" ).toFile();
       FileUtils.copyFile( inputFile( testModel ).getAbsoluteFile(), inputFile );
 
@@ -1584,6 +1502,7 @@ class SammCliTest {
    }
 
    @Test
+   @Disabled( "Temporarily disabled due to an issue under investigation in CI" )
    void testAspectUsageWithGitHubResolution() {
       final String remoteModelsDirectory = "core/esmf-test-aspect-models/src/main/resources/valid";
       final String urnToCheck = TestModel.TEST_NAMESPACE + "testProperty";
@@ -1602,10 +1521,10 @@ class SammCliTest {
    }
 
    @Test
-   void testPackageImport() {
+   void testPackageImport( @TempDir final Path outputDirectory ) throws IOException {
       // Set up new empty models root directory
       final File modelsRoot = outputDirectory.toFile();
-      modelsRoot.mkdirs();
+      Files.createDirectories( outputDirectory );
 
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "package",
             inputFile( "namespaces.zip" ).getAbsolutePath(), "import", "--models-root", modelsRoot.getAbsolutePath() );
@@ -1626,7 +1545,7 @@ class SammCliTest {
    }
 
    @Test
-   void testPackageExportForNamespace() throws IOException {
+   void testPackageExportForNamespace( @TempDir final Path outputDirectory ) throws IOException {
       // Set up models root
       final Path modelFileLocation = outputDirectory.resolve( testModel.getUrn().getNamespaceMainPart() )
             .resolve( testModel.getUrn().getVersion() );
@@ -1647,7 +1566,7 @@ class SammCliTest {
    }
 
    @Test
-   void testPackageExportForAspectFromFile() {
+   void testPackageExportForAspectFromFile( @TempDir final Path outputDirectory ) {
       final Path outputFile = outputDirectory.resolve( "package.zip" );
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "package",
             inputFile( testModel ).getAbsolutePath(), "export", "--output", outputFile.toFile().getAbsolutePath() );
@@ -1658,7 +1577,7 @@ class SammCliTest {
    }
 
    @Test
-   void testPackageExportForAspectFromUrn() {
+   void testPackageExportForAspectFromUrn( @TempDir final Path outputDirectory ) {
       final String modelsRoot = inputFile( testModel ).getParentFile().getParentFile().getParentFile().getAbsolutePath();
       final Path outputFile = outputDirectory.resolve( "package.zip" );
       final ExecutionResult result = sammCli.runAndExpectSuccess( "--disable-color", "package",
@@ -1670,7 +1589,7 @@ class SammCliTest {
    }
 
    @Test
-   void testImportJsonSchema() throws IOException {
+   void testImportJsonSchema( @TempDir final Path outputDirectory ) throws IOException {
       // Create test JSON schema file
       final Aspect originalAspect = TestResources.load( testModel ).aspect();
       final JsonNode jsonSchema = new AspectModelJsonSchemaGenerator( originalAspect ).getContent();
@@ -1691,90 +1610,48 @@ class SammCliTest {
       assertThat( outputFile ).exists().isNotEmptyFile().content().contains( ":TestAspect a samm:Aspect" );
    }
 
-   /**
-    * Returns the File object for a test namespace package file
-    */
-   private static File inputFile( final String filename ) {
-      final String resourcePath = String.format( "%s/../../core/esmf-test-aspect-models/src/main/resources/packages/%s",
-            System.getProperty( "user.dir" ), filename );
-      try {
-         return new File( resourcePath ).getCanonicalFile();
-      } catch ( final IOException exception ) {
-         throw new RuntimeException( exception );
+   // Test should be deleted after https://github.com/oracle/graal/issues/12782 is fixed and the
+   // GraalVM version is updated.
+   @Test
+   void testDisableWarning( @TempDir final Path outputDirectory ) {
+      final File targetFile = outputFile( outputDirectory, "output.ttl" );
+      final ProcessLauncher<?> customSammCli = new MainClassProcessLauncher( SammCli.class, List.of(),
+            argument -> !"-XX:ThreadPriorityPolicy=1".equals( argument ) && !argument.startsWith( "-agentlib:jdwp" ), false
+      );
+      final ExecutionResult result = customSammCli.runAndExpectSuccess( "--disable-color", "aspect", defaultInputFile, "prettyprint", "-o",
+            targetFile.getAbsolutePath() );
+
+      final List<Pattern> expectedPatterns = List.of(
+            Pattern.compile( "WARNING: A restricted method in java\\.lang\\.System has been called" ),
+            Pattern.compile( "WARNING: java\\.lang\\.System::load has been called by "
+                  + "com\\.oracle\\.truffle\\.polyglot\\.JDKSupport in an unnamed module \\(file:.*\\)$" ),
+            Pattern.compile( "WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module" ),
+            Pattern.compile( "WARNING: Restricted methods will be blocked in a future release unless native access is enabled" ),
+            Pattern.compile( "WARNING: A terminally deprecated method in sun\\.misc\\.Unsafe has been called" ),
+            Pattern.compile( "WARNING: sun\\.misc\\.Unsafe::objectFieldOffset has been called by "
+                  + "com\\.oracle\\.truffle\\.api\\.strings\\.TStringUnsafe \\(file:.*\\)$" ),
+            Pattern.compile( "WARNING: Please consider reporting this to the maintainers of class "
+                  + "com\\.oracle\\.truffle\\.api\\.strings\\.TStringUnsafe" ),
+            Pattern.compile( "WARNING: sun\\.misc\\.Unsafe::objectFieldOffset will be removed in a future release" )
+      );
+
+      final List<String> actualLines = Arrays.stream( result.stderr().split( "\\R" ) )
+            .map( String::trim )
+            .filter( s -> !s.isEmpty() )
+            .toList();
+
+      for ( final Pattern pattern : expectedPatterns ) {
+         final boolean found = actualLines.stream().anyMatch( line -> pattern.matcher( line ).matches() );
+         assertThat( found )
+               .as( "Pattern not found: " + pattern.pattern() )
+               .isTrue();
       }
-   }
 
-   /**
-    * Returns the File object for a test model file
-    */
-   private static File inputFile( final TestModel testModel ) {
-      final boolean isValid = !( testModel instanceof InvalidTestAspect );
-      final boolean isOrdering = testModel instanceof OrderingTestAspect;
-
-      final String resourcePath;
-      if ( isOrdering ) {
-         resourcePath = String.format(
-               "%s/../../core/esmf-test-aspect-models/src/main/resources/valid/org.eclipse.esmf.test.ordering/1.0.0/%s.ttl",
-               System.getProperty( "user.dir" ), testModel.getName() );
-      } else {
-         resourcePath = String.format(
-               "%s/../../core/esmf-test-aspect-models/src/main/resources/%s/org.eclipse.esmf.test/1.0.0/%s.ttl",
-               System.getProperty( "user.dir" ), isValid ? "valid" : "invalid", testModel.getName() );
-      }
-
-      try {
-         return new File( resourcePath ).getCanonicalFile();
-      } catch ( final IOException e ) {
-         throw new RuntimeException( e );
-      }
-   }
-
-   /**
-    * Given a file name, returns the File object for this file inside the temporary directory
-    */
-   private File outputFile( final String filename ) {
-      return outputDirectory.toAbsolutePath().resolve( filename ).toFile();
-   }
-
-   private static void writeToFile( final File file, final String content ) {
-      try {
-         final BufferedWriter writer = new BufferedWriter( new FileWriter( file ) );
-         writer.write( content );
-         writer.close();
-      } catch ( final IOException e ) {
-         throw new RuntimeException( e );
-      }
-   }
-
-   private MediaType contentType( final byte[] input ) {
-      try {
-         return new TikaConfig().getDetector().detect( new BufferedInputStream( new ByteArrayInputStream( input ) ), new Metadata() );
-      } catch ( final IOException | TikaException exception ) {
-         throw new RuntimeException( exception );
-      }
-   }
-
-   private static MediaType contentType( final File file ) {
-      try {
-         return new TikaConfig().getDetector().detect( new BufferedInputStream( new FileInputStream( file ) ), new Metadata() );
-      } catch ( final IOException | TikaException exception ) {
-         throw new RuntimeException( exception );
-      }
-   }
-
-   private static String resolverCommand() {
-      // Note that the following code must not use .class/.getClass()/.getClassLoader() but only operate on the file system level,
-      // since otherwise it will break when running the test suite from the maven build (where tests are run from the jar and resources
-      // are not resolved to the file system but to the jar)
-      try {
-         final String resolverScript = new File(
-               System.getProperty( "user.dir" ) + "/target/test-classes/model_resolver" + ( OS.WINDOWS.isCurrentOs()
-                     ? ".bat" : ".sh" ) ).getCanonicalPath();
-         final String modelsRoot = new File( System.getProperty( "user.dir" ) + "/target/classes/valid" ).getCanonicalPath();
-         final String metaModelVersion = KnownVersion.getLatest().toString().toLowerCase();
-         return resolverScript + ' ' + modelsRoot + ' ' + metaModelVersion;
-      } catch ( final IOException exception ) {
-         throw new RuntimeException( exception );
+      for ( final String line : actualLines ) {
+         final boolean matchesAny = expectedPatterns.stream().anyMatch( pattern -> pattern.matcher( line ).matches() );
+         assertThat( matchesAny )
+               .as( "Unexpected line: " + line )
+               .isTrue();
       }
    }
 }
